--- a/src/drivers-lic-detail-multiple.html
+++ b/src/drivers-lic-detail-multiple.html
@@ -334,7 +334,38 @@
                                                         </div>
                                                     </div>
 
+                                                    <div class="col-md-3 col-4 align-self-center">
+                                                        <label class="radio-inline" for="us">
+                                                            <input class="radio-control" type="radio" name="country"
+                                                                value="" id="us" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label">United States </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="col-md-3  col-8 align-self-center">
+                                                        <label class="radio-inline" for="other">
+                                                            <input class="radio-control" type="radio" name="country"
+                                                                value="" id="other" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label">Other Country </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <div class="f-group max-width-100">
 
+                                                            <select class="f-control f-dropdown"
+                                                                placeholder="Select Country" id="multiple"
+                                                                class="js-states form-control" multiple>
+                                                                <option value="">Select Vehicles to Exclude from
+                                                                </option>
+                                                                <option value="1">Single
+                                                                </option>
+                                                                <option value="2">Married
+                                                                </option>
+
+                                                            </select>
+                                                        </div>
+                                                    </div>
                                                     <div class="col-md-2 col-4 align-self-center">
                                                         <label class="radio-inline" for="us">
                                                             <input class="radio-control" type="radio" name="country"
@@ -440,7 +471,38 @@
                                                             </select>
                                                         </div>
                                                     </div>
+                                                    <div class="col-md-3 col-4 align-self-center">
+                                                        <label class="radio-inline" for="us">
+                                                            <input class="radio-control" type="radio" name="country"
+                                                                value="" id="us" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label">United States </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="col-md-3  col-8 align-self-center">
+                                                        <label class="radio-inline" for="other">
+                                                            <input class="radio-control" type="radio" name="country"
+                                                                value="" id="other" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label">Other Country </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <div class="f-group max-width-100">
 
+                                                            <select class="f-control f-dropdown"
+                                                                placeholder="Select Country" id="multiple"
+                                                                class="js-states form-control" multiple>
+                                                                <option value="">Select Vehicles to Exclude from
+                                                                </option>
+                                                                <option value="1">Single
+                                                                </option>
+                                                                <option value="2">Married
+                                                                </option>
+
+                                                            </select>
+                                                        </div>
+                                                    </div>
 
                                                     <div class="col-md-2 col-4 align-self-center">
                                                         <label class="radio-inline" for="us">
@@ -547,7 +609,38 @@
                                                             </select>
                                                         </div>
                                                     </div>
+                                                    <div class="col-md-3 col-4 align-self-center">
+                                                        <label class="radio-inline" for="us">
+                                                            <input class="radio-control" type="radio" name="country"
+                                                                value="" id="us" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label">United States </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="col-md-3  col-8 align-self-center">
+                                                        <label class="radio-inline" for="other">
+                                                            <input class="radio-control" type="radio" name="country"
+                                                                value="" id="other" checked="">
+                                                            <span class="radio-custom"></span>
+                                                            <span class="radio-label">Other Country </span>
+                                                        </label>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <div class="f-group max-width-100">
 
+                                                            <select class="f-control f-dropdown"
+                                                                placeholder="Select Country" id="multiple"
+                                                                class="js-states form-control" multiple>
+                                                                <option value="">Select Vehicles to Exclude from
+                                                                </option>
+                                                                <option value="1">Single
+                                                                </option>
+                                                                <option value="2">Married
+                                                                </option>
+
+                                                            </select>
+                                                        </div>
+                                                    </div>
 
                                                     <div class="col-md-2 col-4 align-self-center">
                                                         <label class="radio-inline" for="us">
