--- a/src/30-which-vehical-policy.html
+++ b/src/30-which-vehical-policy.html
@@ -239,6 +239,62 @@
                                                 </label>
                                             </div>
                                         </div>
+                                        <div class="col-sm-6">
+                                            <div class="f-group max-width-100">
+
+                                                <select class="f-control f-dropdown" placeholder=" Collison"
+                                                    id="multiple" class="js-states form-control" multiple>
+                                                    <option value="">Limited Collison</option>
+                                                    <option value="1">Limited Collison
+                                                    </option>
+                                                    <option value="2">Married
+                                                    </option>
+
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="f-group max-width-100">
+                                                <select class="f-control f-dropdown" placeholder="Rental Car"
+                                                    id="multiple" class="js-states form-control" multiple>
+                                                    <option value="">Rental Car</option>
+                                                    <option value="1">United Status
+                                                    </option>
+                                                    <option value="2">Married
+                                                    </option>
+
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="f-group max-width-100">
+
+                                                <select class="f-control f-dropdown" placeholder="Comprehensive"
+                                                    id="multiple" class="js-states form-control" multiple>
+                                                    <option value="">Comprehensive</option>
+                                                    <option value="1">Comprehensive
+                                                    </option>
+                                                    <option value="2">Married
+                                                    </option>
+
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="f-group max-width-100">
+
+                                                <select class="f-control f-dropdown" placeholder="Towing & Labor"
+                                                    id="multiple" class="js-states form-control" multiple>
+                                                    <option value="">Towing & Labor</option>
+                                                    <option value="1">United Status
+                                                    </option>
+                                                    <option value="2">Married
+                                                    </option>
+
+                                                </select>
+                                            </div>
+                                        </div>
+
                                         <div class="col-12">
                                             <div class="row align-items-end g-3">
                                                 <div class="col-md-6">
@@ -336,41 +392,97 @@
                                             </span>
                                         </label>
                                         <div class="customize-options mt-3">
-                                            <div class="d-flex justify-content-between mb-2">
-                                                <h4 class="fs-16  mb-2">Customize Options</h4 class="fs-16">
-                                                <label class="checkbox-inline w-auto me-3  mb-2"
-                                                    for="flexCheckDefault212">
-                                                    <input class="checkbox-control" type="checkbox" value=""
-                                                        id="flexCheckDefault212" checked="">
-                                                    <span class="checkbox-custom"></span>
-                                                    <span class="checkbox-label">Apply to all Vehicles</span>
-                                                </label>
+
+                                            <div class="my-4">
+                                                <div class="d-flex justify-content-between mb-2">
+                                                    <div>
+                                                        <h5 class="fs-16">
+                                                            Limits
+                                                        </h5>
+
+                                                        <h5 class="fs-12">20/40 Bodily Injury &amp; Personal Injury
+                                                            already
+                                                            included
+                                                        </h5>
+                                                    </div>
+                                                    <label class="checkbox-inline w-auto me-3  mb-2"
+                                                        for="flexCheckDefault212">
+                                                        <input class="checkbox-control" type="checkbox" value=""
+                                                            id="flexCheckDefault212" checked="">
+                                                        <span class="checkbox-custom"></span>
+                                                        <span class="checkbox-label">Apply to all Vehicles</span>
+                                                    </label>
+                                                </div>
                                             </div>
                                             <div class="row g-3">
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Bodily Injured">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Optional Bodily Injury" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Personal Injury Ded">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Medical Payments" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text" placeholder="Uninsured">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Property Damage" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Property Damage">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Un /Under Insured" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Optional Bodily Injury">
-                                                </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Medical Payments">
-                                                </div>
+
+
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
