--- a/src/31-select-vehical-coverage.html
+++ b/src/31-select-vehical-coverage.html
@@ -225,7 +225,10 @@
                                 </a>
 
                                 <div class="mt-4 white-box">
-                                    <h4 class="title fs-22 mb-3">Coverage Level</h4>
+                                    <h4 class="title fs-22 mb-3 d-flex align-items-center justify-content-start">
+                                        Coverage Level <a class="ms-3" href="#" data-bs-toggle="modal"
+                                            data-bs-target="#videoModal"><img src="images/info.svg" alt="Add"
+                                                class="icon" /></a></h4>
                                     <div class="row g-3">
                                         <div class="col-sm-4">
                                             <label class="radio-inline w-100" for="low">
@@ -250,7 +253,8 @@
                                         </div>
                                     </div>
                                     <div class="mt-3">
-                                        <label class="radio-box button-style w-100" for="Coverage">
+                                        <label class="radio-box button-style w-100" for="Coverage"
+                                            data-bs-toggle="modal" data-bs-target="#coverageModal">
                                             <input class="radio-box-control" type="checkbox" name="Customize" value=""
                                                 id="Coverage">
                                             <span class="radio-box-custom">
@@ -259,41 +263,97 @@
                                             </span>
                                         </label>
                                         <div class="customize-options mt-3">
-                                            <div class="d-flex justify-content-between mb-2">
-                                                <h4 class="fs-16 mb-2">Customize Options</h4 class="fs-16">
-                                                <label class="checkbox-inline w-auto me-3 mb-2"
-                                                    for="flexCheckDefault212">
-                                                    <input class="checkbox-control" type="checkbox" value=""
-                                                        id="flexCheckDefault212" checked="">
-                                                    <span class="checkbox-custom"></span>
-                                                    <span class="checkbox-label">Apply to all Vehicles</span>
-                                                </label>
+
+                                            <div class="my-4">
+                                                <div class="d-flex justify-content-between mb-2">
+                                                    <div>
+                                                        <h5 class="fs-16">
+                                                            Limits
+                                                        </h5>
+
+                                                        <h5 class="fs-12">20/40 Bodily Injury &amp; Personal Injury
+                                                            already
+                                                            included
+                                                        </h5>
+                                                    </div>
+                                                    <label class="checkbox-inline w-auto me-3  mb-2"
+                                                        for="flexCheckDefault212">
+                                                        <input class="checkbox-control" type="checkbox" value=""
+                                                            id="flexCheckDefault212" checked="">
+                                                        <span class="checkbox-custom"></span>
+                                                        <span class="checkbox-label">Apply to all Vehicles</span>
+                                                    </label>
+                                                </div>
                                             </div>
                                             <div class="row g-3">
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Bodily Injured">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Optional Bodily Injury" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Personal Injury Ded">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Medical Payments" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text" placeholder="Uninsured">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Property Damage" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Property Damage">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
+
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Un /Under Insured" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
+
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Optional Bodily Injury">
-                                                </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <input class="form-control" type="text"
-                                                        placeholder="Medical Payments">
-                                                </div>
+
+
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -339,6 +399,50 @@
                     <button class="btn btn-primary" data-bs-dismiss="modal"><span
                             class="position-relative">Save</span></button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="videoModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                    <div class=" justify-content-center mt-0">
+
+                        <!-- <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item w-100 h-100 vh-100"
+                                        src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                </div> -->
+
+                        <div class="embed-responsive embed-responsive-16by9 my-auto responsive-video position-relative">
+                            <video class="embed-responsive-item w-100" loop muted controls autoplay>
+                                <source src="https://www.w3schools.com/html/mov_bbb.mp4">
+                            </video>
+                            <div class="progress-round">22%</div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="coverageModal" tabindex="-1" aria-labelledby="coverageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+
+                <div class="modal-body p-3 text-center">
+                    <p class=" fs-16 my-4">You are now in Custom Coverage Mode. Click Low, Medium or High to return
+                    </p>
+
+
+                </div>
+
             </div>
         </div>
     </div>
