--- a/src/35-coverage-level.html
+++ b/src/35-coverage-level.html
@@ -178,7 +178,10 @@
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
                                 <div class="mb-5 white-box">
-                                    <h4 class="title fs-22 mb-3">Coverage Level</h4>
+                                    <h4 class="title fs-22 mb-3 d-flex align-items-center justify-content-start">
+                                        Coverage Level <a class="ms-3" href="#" data-bs-toggle="modal"
+                                            data-bs-target="#videoModal"><img src="images/info.svg" alt="Add"
+                                                class="icon" /></a></h4>
                                     <div class="row g-3">
                                         <div class="col-sm-4">
                                             <label class="radio-inline w-100" for="low">
@@ -202,9 +205,9 @@
                                             </label>
                                         </div>
                                     </div>
-
                                     <div class="mt-3">
-                                        <label class="radio-box button-style w-100" for="Coverage">
+                                        <label class="radio-box button-style w-100" for="Coverage"
+                                            data-bs-toggle="modal" data-bs-target="#coverageModal">
                                             <input class="radio-box-control" type="checkbox" name="Customize" value=""
                                                 id="Coverage">
                                             <span class="radio-box-custom">
@@ -213,94 +216,97 @@
                                             </span>
                                         </label>
                                         <div class="customize-options mt-3">
-                                            <div class="d-flex justify-content-between mb-2">
-                                                <h4 class="fs-16">Customize Options</h4 class="fs-16">
-                                                <label class="checkbox-inline w-auto me-3" for="flexCheckDefault212">
-                                                    <input class="checkbox-control" type="checkbox" value=""
-                                                        id="flexCheckDefault212" checked="">
-                                                    <span class="checkbox-custom"></span>
-                                                    <span class="checkbox-label">Apply to all Vehicles</span>
-                                                </label>
+
+                                            <div class="my-4">
+                                                <div class="d-flex justify-content-between mb-2">
+                                                    <div>
+                                                        <h5 class="fs-16">
+                                                            Limits
+                                                        </h5>
+
+                                                        <h5 class="fs-12">20/40 Bodily Injury &amp; Personal Injury
+                                                            already
+                                                            included
+                                                        </h5>
+                                                    </div>
+                                                    <label class="checkbox-inline w-auto me-3  mb-2"
+                                                        for="flexCheckDefault212">
+                                                        <input class="checkbox-control" type="checkbox" value=""
+                                                            id="flexCheckDefault212" checked="">
+                                                        <span class="checkbox-custom"></span>
+                                                        <span class="checkbox-label">Apply to all Vehicles</span>
+                                                    </label>
+                                                </div>
                                             </div>
                                             <div class="row g-3">
-                                                <div class="col-sm-4 col-6">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
 
-                                                    <select class="f-control f-dropdown" placeholder="Bodily Injured"
-                                                        id="multiple" class="js-states form-control" multiple>
-                                                        <option value=""> Collison
-                                                        </option>
-                                                        <option value="1">Single
-                                                        </option>
-                                                        <option value="2">Married
-                                                        </option>
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Optional Bodily Injury" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
 
-                                                    </select>
+                                                        </select>
+                                                    </div>
 
                                                 </div>
-                                                <div class="col-sm-4 col-6">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
 
-                                                    <select class="f-control f-dropdown"
-                                                        placeholder="Personal Injury Ded" id="multiple"
-                                                        class="js-states form-control" multiple>
-                                                        <option value=""> Collison
-                                                        </option>
-                                                        <option value="1">Single
-                                                        </option>
-                                                        <option value="2">Married
-                                                        </option>
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Medical Payments" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
 
-                                                    </select>
+                                                        </select>
+                                                    </div>
+
                                                 </div>
-                                                <div class="col-sm-4 col-6">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
 
-                                                    <select class="f-control f-dropdown" placeholder="Uninsured"
-                                                        id="multiple" class="js-states form-control" multiple>
-                                                        <option value=""> Collison
-                                                        </option>
-                                                        <option value="1">Single
-                                                        </option>
-                                                        <option value="2">Married
-                                                        </option>
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Property Damage" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
 
-                                                    </select> </div>
-                                                <div class="col-sm-4 col-6">
+                                                        </select>
+                                                    </div>
 
-                                                    <select class="f-control f-dropdown" placeholder="Property Damage"
-                                                        id="multiple" class="js-states form-control" multiple>
-                                                        <option value=""> Collison
-                                                        </option>
-                                                        <option value="1">Single
-                                                        </option>
-                                                        <option value="2">Married
-                                                        </option>
-
-                                                    </select> </div>
-                                                <div class="col-sm-4 col-6">
-                                                    <select class="f-control f-dropdown"
-                                                        placeholder="Optional Bodily Injury" id="multiple"
-                                                        class="js-states form-control" multiple>
-                                                        <option value=""> Collison
-                                                        </option>
-                                                        <option value="1">Single
-                                                        </option>
-                                                        <option value="2">Married
-                                                        </option>
-
-                                                    </select>
                                                 </div>
-                                                <div class="col-sm-4 col-6">
+                                                <div class="col-sm-6">
+                                                    <div class="f-group max-width-100">
 
-                                                    <select class="f-control f-dropdown" placeholder="Medical Payments"
-                                                        id="multiple" class="js-states form-control" multiple>
-                                                        <option value=""> Collison
-                                                        </option>
-                                                        <option value="1">Single
-                                                        </option>
-                                                        <option value="2">Married
-                                                        </option>
+                                                        <select class="f-control f-dropdown"
+                                                            placeholder="Un /Under Insured" id="multiple"
+                                                            class="js-states form-control" multiple>
+                                                            <option value="">Towing & Labor</option>
+                                                            <option value="1">United Status
+                                                            </option>
+                                                            <option value="2">Married
+                                                            </option>
 
-                                                    </select> </div>
+                                                        </select>
+                                                    </div>
+
+                                                </div>
+
+
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -754,6 +760,53 @@
                                     class="btn btn-primary mx-auto mt-4"><span>Continue</span></button>
                             </form>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="videoModalLabel">Modal title</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+
+                            <div class=" justify-content-center mt-0">
+
+                                <!-- <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item w-100 h-100 vh-100"
+                                        src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                </div> -->
+
+                                <div
+                                    class="embed-responsive embed-responsive-16by9 my-auto responsive-video position-relative">
+                                    <video class="embed-responsive-item w-100" loop muted controls autoplay>
+                                        <source src="https://www.w3schools.com/html/mov_bbb.mp4">
+                                    </video>
+                                    <div class="progress-round">22%</div>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="coverageModal" tabindex="-1" aria-labelledby="coverageModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg">
+                    <div class="modal-content">
+
+                        <div class="modal-body p-3 text-center">
+                            <p class=" fs-16 my-4">You are now in Custom Coverage Mode. Click Low, Medium or High to
+                                return
+                            </p>
+
+
+                        </div>
+
                     </div>
                 </div>
             </div>
