--- a/src/remarket-3.html
+++ b/src/remarket-3.html
@@ -125,135 +125,111 @@
             </nav>
             <div class="content-main">
                 <div class="content">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-4">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:20%">
 
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Drivers</div>
-                            </div>
-                            <div class="col-4">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Vehicles
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Discounts</div>
-                            </div>
-                        </div>
-                        <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
-                    </div>
-                    <div class="container mt-5 pt-5">
+                    <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
+                    <div class="container mt-4">
                         <div class="text-center mb-4 user-info">
                             <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">How would you Like to Attach Your Policy </h3>
-                        <p class="sub-title mt-2  text-center">Please upload a copy of the pages that show the vehicles,
-                            drivers and coverage's</p>
+                        <h3 class="title  text-center">Congrats ! You’re still getting the best price 🙂
+                        </h3>
 
 
-                        <div class="upload-box mt-3">
-                            <div class="radio-check-switch row">
+                        <div class="price-table mt-4">
+                            <div class="table-responsive">
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th class="active " scope="col"><span
+                                                    class="d-flex align-items-center flex-nowrap"><img
+                                                        src="./images/green-check.svg" alt=""
+                                                        class="img-fluid me-1">$1150/Year</span> </th>
+                                            <td class="active"> Ezhe Source</td>
 
-                                <div class="form-item col-md-6">
-                                    <label for="radio-switch-2-2">
-                                        <input type="file" id="radio-switch-2-2">
-                                        <div class="radio-switch-state m-0">
-                                            <img src="./images/upload.svg" class="mx-auto" />
-                                            <p class="ins-title">Upload or Drag & Drop</p>
-                                            <span class="icon-on"></span>
-                                        </div>
-                                    </label>
-                                </div>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">$1200/Year</th>
+                                            <td>Grey Fade</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">$1260/Year</th>
+                                            <td>Auto Works</td>
 
-                                <div class="form-item col-md-6">
-                                    <label for="radio-switch-2-1">
-                                        <input type="file" id="radio-switch-2-1">
-                                        <div class="radio-switch-state m-0">
-                                            <img src="./images/scan.svg" class="mx-auto" />
-                                            <p class="ins-title">Take A Picture </p>
-                                            <span class="icon-on"></span>
-                                        </div>
-                                    </label>
-                                </div>
-
-
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">$1300/Year</th>
+                                            <td colspan="2">Super Duper</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
-
-                        <div class="upload-box mt-3">
-                            <div class="radio-check-switch row">
-
-                                <div class="form-item col-md-6">
-                                    <div class="uploaded-document-block m-0">
-                                        <div class="document-block">
-                                            <div class="document-thumb-block ">
-                                                <a href="#" class="btn-remove">
-                                                    <img src="images/icon-close-red.svg" alt="close" />
-                                                </a>
-                                                <img src="images/document.png" class="img-fluid mx-auto"
-                                                    alt="document" />
-                                            </div>
-                                            <p class="document-title">john_Policy_dpcuent.image</p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-item col-md-6">
-                                    <label for="radio-switch-2-1">
-                                        <input type="radio" id="radio-switch-2-1">
-                                        <div class="radio-switch-state m-0">
-                                            <img src="./images/scan.svg" class="mx-auto" />
-                                            <p class="ins-title">Take A Picture </p>
-                                            <span class="icon-on"></span>
-                                        </div>
-                                    </label>
-                                </div>
+                        <div style="gap:10px;"
+                            class="d-flex flex-column flex-sm-row align-items-center justify-content-center mt-4">
+                            <button type="submit" class="btn btn-outline" data-bs-toggle="modal"
+                                data-bs-target="#exampleModalToggle2"><span>
+                                    Continue</span></button>
+                            <button type="submit" class="btn btn-primary" data-bs-toggle="tooltip"
+                                data-bs-placement="right" title="we can try to lower your price by adjusting coverages &
+                                deductibles"><span>Lower My
+                                    Price</span></button>
 
 
-                            </div>
                         </div>
 
+                        <div class="d-flex align-items-center justify-content-center mt-4 mb-2">
 
-                        <div class="text-center">
-                            <label class="checkbox mx-auto" for="red">
-                                <input type="checkbox" name="color" checked value="red" id="red">
-                                <span class="checkmark"></span>
-                                Keep the current policy Limit
-                            </label>
+
+                            <span style="cursor: pointer;"
+                                class="text-blue fs-14 text-underline text-uppercase fw-bold btn-why">Why?</span>
+
+
                         </div>
 
-
-
-
-
-
-                        <div class="d-flex align-items-center justify-content-center my-4">
-                            <button type="submit" class="btn btn-primary   me-2"><span>Continue</span></button>
-
-
+                        <div style="display:none;" class="msg-box why-info ">
+                            (if any points or violations will say: It looks like (driver name (list of violations) but
+                            rest assured we checked all the option above for you) Unlike other companies we pull all
+                            reports now to make sure you are getting accurate pricing, most companies will give you a
+                            price the raise it & send you a higher bill later, We have best price 4 life guarantee but
+                            if for some reason you shop around ask them these two question \
+                            Have you already pulled all reports
+                            Send me in WRITING that my price will not change after you take my money Guarantee they
+                            won’t : ) because they are lying, you’re welcome... Try it
                         </div>
 
                     </div>
+                </div>
+            </div>
+            <div class="modal fade" id="exampleModalToggle2" aria-hidden="true"
+                aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header border-0 d-block">
+
+                            <h4 class="title fs-20 mb-0 mx-auto text-center mt-3 fw-bold ">We will lower coverages &
+                                increase
+                                deductibles to <br />lower your price
+                            </h4>
+
+                        </div>
+                        <div class="modal-body">
+                            <div style="gap:10px;"
+                                class="d-flex flex-column flex-sm-row align-items-center justify-content-center mt-2">
+                                <button type="submit" class="btn btn-primary " data-bs-dismiss="modal"><span>
+                                        Accept & Continue</span></button>
+
+                                <button type="submit" class="btn btn-outline "
+                                    data-bs-dismiss="modal"><span>Cancel</span></button>
+                            </div>
+
+
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -267,7 +243,19 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/app.js"></script>
+    <script>
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
 
+        $(document).ready(function () {
+
+            $(".btn-why").click(function () {
+                $(".why-info").show();
+            });
+        });
+    </script>
 </body>
 
 </html>
