new-address-page

--- a/src/remarket-1-test.html
+++ b/src/remarket-1-test.html
@@ -231,22 +231,22 @@
                                                     <li>
                                                         <div class="d-flex align-items-center">Pay in full Discounts
                                                             <a href="" class="ms-2"><img style="display:none;"
-                                                                    src="./images/close.svg" class="img-fluid dlt-class"
-                                                                    width=20 /></a></div>
+                                                                    src="images/delete.svg" class="img-fluid dlt-class"
+                                                                    width=12 /></a></div>
                                                     </li>
                                                     <li>
                                                         <div class="d-flex align-items-center">MA Association or Realtor
                                                             Member
                                                             <a href="" class="ms-2"><img style="display:none;"
-                                                                    src="./images/close.svg" class="img-fluid dlt-class"
-                                                                    width=20 /></a></div>
+                                                                    src="images/delete.svg" class="img-fluid dlt-class"
+                                                                    width=12 /></a></div>
                                                     </li>
                                                     <li>
                                                         <div class="d-flex align-items-center">MA
                                                             Youth Association Member
                                                             <a href="" class="ms-2"><img style="display:none;"
-                                                                    src="./images/close.svg" class="img-fluid dlt-class"
-                                                                    width=20 /></a></div>
+                                                                    src="images/delete.svg" class="img-fluid dlt-class"
+                                                                    width=12 /></a></div>
                                                     </li>
 
 
