--- a/src/remarket-2.html
+++ b/src/remarket-2.html
@@ -42,20 +42,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/main.css">
 
-    <style>
-        @media screen and (max-width: 575px) {
-            .radio-check-switch {
-                flex-wrap: wrap !important;
 
-
-                .vs-box {
-                    display: block !important;
-                }
-
-
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -201,7 +188,7 @@
                             </label>
                         </div>
                         <div class="row">
-                            <div class="price-box">
+                            <div class="price-box mt-3">
                                 <div class="radio-check-switch ">
 
                                     <div class="form-item ">
