--- a/src/remarket-5.html
+++ b/src/remarket-5.html
@@ -141,7 +141,7 @@
                         <div class="text-center my-5">
                             <img src="./images/refer.svg" alt="" class="img-fluid  mx-auto">
                         </div>
-                        <div
+                        <!-- <div
                             class="flex-column flex-sm-row align-items-center justify-content-center mt-4 d-none d-md-flex">
                             <button type="submit" class="acnt-btn btn btn-primary mb-2 mb-sm-0 me-sm-4"><span>Refer via
                                     Text</span></button>
@@ -152,21 +152,27 @@
                                     CODE</span></button>
 
 
-                        </div>
+                        </div> -->
 
-                        <div class="d-flex d-md-none align-items-center justify-content-center">
-                            <a href="#" class=" d-flex align-items-center justify-content-center me-4">
+                        <div
+                            class="d-flex  align-items-center justify-content-sm-start justify-content-md-center flex-wrap">
+                            <a href="#" class=" d-flex align-items-center justify-content-center me-4 mb-2">
                                 <img src="./images/text.svg" alt="" class="img-fluid me-1">
-                                <p class="ins-title position-unset text-black  text-center">Text</p>
+                                <p class="ins-title position-unset text-black  text-center">Refer via Text</p>
                             </a>
-                            <a href="#" class=" d-flex align-items-center justify-content-center me-4">
-                                <img src="./images/mail.svg" alt="" class="img-fluid me-1">
+                            <a href="#" class=" d-flex align-items-center justify-content-center me-4 mb-2">
+                                <img src="./images/whatsapp.svg" alt="" class="img-fluid me-1">
                                 <p class="ins-title position-unset  text-black   text-center">WhatsApp</p>
                             </a>
-                            <a href="#" class=" d-flex align-items-center justify-content-center me-4">
-                                <img src="./images/copy.svg" alt="" class="img-fluid me-1">
-                                <p class="ins-title position-unset text-black    text-center">Call Us</p>
+                            <a href="#" class=" d-flex align-items-center justify-content-center me-4 mb-2">
+                                <img src="./images/mail.svg" alt="" class="img-fluid me-1">
+                                <p class="ins-title position-unset text-black    text-center">Refer via Email</p>
                             </a>
+                            <a href="#" class=" d-flex align-items-center justify-content-center me-4 mb-2">
+                                <img src="./images/copy.svg" alt="" class="img-fluid me-1">
+                                <p class="ins-title position-unset text-black    text-center">Copy Referral Code</p>
+                            </a>
+
 
                         </div>
 
