--- a/src/51-lower-price.html
+++ b/src/51-lower-price.html
@@ -177,48 +177,58 @@
                             drivers and coverage's</p> -->
 
                         <div class="row">
-                            <div class="col-lg-8 mx-auto mt-5">
-                                <div class="radio-check-switch row position-relative">
+                            <div class="price-box mt-3">
+                                <div class="radio-check-switch ">
 
-                                    <div class="form-item col-md-5">
-
-
+                                    <div class="form-item ">
 
 
-                                        <div class="radio-switch-state h-auto p-4">
+
+
+                                        <div class="radio-switch-state h-auto">
                                             <!-- <img src="./images/upload.svg" class="mx-auto" />
                                             <p class="ins-title">Upload or Drag & Drop</p>
                                             <span class="icon-on"></span> -->
-                                            <p class="amnt-monthly mt-4">$350/<span
-                                                    class="monthly-amnt fs-18">monthly</span></p>
+                                            <p class="amnt-monthly">$350/<span class="monthly-amnt fs-18">monthly</span>
+                                            </p>
 
-                                            <p class="ins-title position-unset mt-3 mb-4  text-center">$350 down & $350
+                                            <!-- <ul class="price-ul">
+                                                <li>$50,000 /$100.000</li>
+                                                <li> $1,000 Deductibles </li>
+                                            </ul> -->
+                                            <p class="ins-title position-unset price-ul  text-center">$350 down &
+                                                $350
                                                 per
                                                 month
                                                 $2,127 Yearly</p>
-                                            <button type="submit" class="btn btn-primary  mt-5 w-100"><span>Buy
+                                            <button type="submit" class="btn btn-primary  w-100"><span>Buy
                                                     now</span></button>
 
                                             <img src="./images/plymouth-rock.svg" alt="" class="img-fluid mt-4">
                                         </div>
 
                                     </div>
-                                    <div class="col-lg-2">
+                                    <div class="vs-box">
                                         <div class="progress-round progress-vs">Vs</div>
                                     </div>
 
-                                    <div class="form-item col-md-5">
-                                        <div class="radio-switch-state h-auto p-4">
+                                    <div class="form-item ">
+                                        <div class="radio-switch-state h-auto">
                                             <!-- <img src="./images/upload.svg" class="mx-auto" />
                                             <p class="ins-title">Upload or Drag & Drop</p>
                                             <span class="icon-on"></span> -->
-                                            <p class="amnt-monthly mt-4">$1350/<span
-                                                    class="monthly-amnt fs-18">monthly</span></p>
+                                            <p class="amnt-monthly">$1350/<span
+                                                    class="monthly-amnt fs-18">monthly</span>
+                                            </p>
 
-                                            <p class="ins-title position-unset mt-3 mb-4  text-center">Save $500 by
+                                            <!-- <ul class="price-ul">
+                                                <li>$50,000 /$100.000</li>
+                                                <li> $1,000 Deductibles </li>
+                                            </ul> -->
+                                            <p class="ins-title position-unset price-ul  text-center">Save $500 by
                                                 paying the
                                                 whole year at once</p>
-                                            <button type="submit" class="btn btn-primary  mt-5 w-100"><span>Buy
+                                            <button type="submit" class="btn btn-primary w-100"><span>Buy
                                                     now</span></button>
 
                                             <img src="./images/plymouth-rock.svg" alt="" class="img-fluid mt-4">
