--- a/src/52-select-payment-method.html
+++ b/src/52-select-payment-method.html
@@ -182,7 +182,7 @@
                                 <div class="form-item col-md-6">
                                     <label for="radio-switch-2-2">
                                         <input type="radio" name="radios-3" id="radio-switch-2-2">
-                                        <div class="radio-switch-state">
+                                        <div class="radio-switch-state m-0">
                                             <img src="./images/checking-acnt.svg" class="mx-auto" />
                                             <p class="ins-title">Checking Account</p>
                                             <span class="icon-on"></span>
@@ -193,7 +193,7 @@
                                 <div class="form-item col-md-6">
                                     <label for="radio-switch-2-1">
                                         <input type="radio" name="radios-3" id="radio-switch-2-1">
-                                        <div class="radio-switch-state">
+                                        <div class="radio-switch-state m-0">
                                             <img src="./images/debit-card.svg" class="mx-auto" />
                                             <p class="ins-title">Credit/Debit Card </p>
                                             <span class="icon-on"></span>
